<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDoExample</string>
    <string name="menu_main_insert">Insert</string>
    <string name="todo_list_empty">No current ToDos</string>
    <string name="todo_edit_summary">ToDo summary</string>
    <string name="todo_edit_description">ToDo description</string>
    <string name="menu_todo_detail_delete">Delete</string>
    <string name="menu_todo_save">Save</string>
    <string name="action_bar_title_detail_fragment">ToDo Details</string>
    <string name="action_bar_title_main_fragment">ToDo List</string>
    <string name="context_menu_delete">Delete</string>
    <string name="navigation_drawer_open_drawer_cont_desc">Open navigation drawer</string>
    <string name="navigation_drawer_close_drawer_cont_desc">Close navigation drawer</string>
    <string name="navigation_drawer_action_bar_open_drawer">Drawer opened</string>
    <string name="navigation_drawer_action_bar_close_drawer">App name</string>
    <string name="hello_world">Hello Now Card</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_register__short">Sign Up</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="prompt_full_name">full name</string>
    <string name="prompt_email">email</string>
    <string name="menu_main_sign_out">Sign out</string>
    <string name="menu_main_sync">Sync</string>
    <string name="menu_main_new_toDo">New ToDo</string>
    <string name="menu_main_new_project">New Project</string>
    <string name="dialog_prompt_project_summary">name or summary</string>
    <string name="dialog_prompt_progect_description">description</string>
    <string name="navigation_drawer_action_bar_open_projects">Your projects</string>
    <string name="navigation_drawer_action_bar_close_toDoApp">ToDo Manager</string>
</resources>
