<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <item
            android:id="@+id/menu_main_sync"
            android:showAsAction="always"
            android:title="@string/menu_main_sync"
            android:icon="@android:drawable/stat_notify_sync"
            />
    <item
            android:id="@+id/menu_main_new_toDo"
            android:showAsAction="always|withText"
            android:title="@string/menu_main_new_toDo"
            android:icon="@android:drawable/ic_menu_add"
            />

    <item
            android:id="@+id/menu_main_new_project"
            android:showAsAction="never"
            android:title="@string/menu_main_new_project"
            />

    <item
            android:id="@+id/menu_main_sign_out"
            android:showAsAction="never"
            android:title="@string/menu_main_sign_out"
            />

</menu>
