<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center|bottom"
                android:padding="8dp"
                android:minWidth="400dp"

                >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >
            </LinearLayout>

            <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_margin="5dp"


                    android:singleLine="true"

                    />


            <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_margin="5dp"

                    />


            <LinearLayout
                    android:padding="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                <Button
                        android:id="@+id/login_btnSignUp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:text="@string/action_register__short"
                        android:layout_margin="5dp"
                        />


                <Button
                        android:id="@+id/login_btnLogIn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:layout_margin="5dp"

                        android:text="@string/action_sign_in_short"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>